==> LEOlianggaosang/verb_BWjiwenVersion0/奶瓶机电源板/SC92F8463B_BW1_P/Hardware/LowLevel/SinOne/SC92F8463/devs/Serial.c <==
#include "H/SC92F846XB_C.H"
#include "WashDish\WashDish.h"
#include "SerialDrv.h"
#include "product_config.h"

void UART0_Init( void )
{//显示板
	P1CON &= ~0x0c;   //TX/RX, P13,P12 input mode//SOC 1111 0011
	P1PH |= 0x0c;			//0000 1100
	//**********
	// UART0 set to uart mode1
	SCON |= UART0_SCON_MODE;		//01XX XXXX
	// mode 1: 1 start bit , 8 data, 1 stop bit
	//SCON  |= 0X50;   //设置通信方式为模式一，允许接收
	// enable UART0 receive data
	UART0_REN_OFF;		//xxx1 xxxx
	//**********
	//use timer2
	TMCON	|= TIMER2_INPUT_FSYS_DIVIDE_12;	
	T2MOD = 0X00;
	PCON  = 0X00;				//SMOD=0
	T2CON = (T2CON_RCLK|T2CON_TCLK);		//T2CON = 0X30;
	//**********

	// //baud = 200
	// RCAP2L = UART0_TIMER2_RCAP2L;   //RCAP2H = Freq*1000000/baud/256;
	// RCAP2H = UART0_TIMER2_RCAP2H;   //RCAP2L = Freq*1000000/baud%256;

	//baud = 9600
	RCAP2L = UART0_RCAP2L;   //RCAP2H = Freq*1000000/baud/256;
	RCAP2H = UART0_RCAP2H;   //RCAP2L = Freq*1000000/baud%256;

	//**********
	T2CON	&= ~(T2CON_TR2);//TR2 = 0;
	ET2 = 0;
	EUART = 0;     //disable Uart
	IPUART = 0;
	//**********
	UART0isSendBuzy = 0;
	UART0hasReceived = 0;
	gUART0TxCnt = 0;
	gUART0RxCnt = 0;
//	gpUART0RxAddress = & SendDatasBuf;
}

void Uart_Hardware_Init(eHardwareSerialName name)
{
	switch(name)
	{
		case UART_0:
			UART0_Init();
			break;
		case UART_1:
			UART1_Init();
			break;
		default:
			break;
	}
		 
}

void Uart_Hardware_Start(eHardwareSerialName name)
{
	switch(name)
	{
		case UART_0:
			UART0_Start();
			break;
		case UART_1:
			UART1_Start();
			break;
		
		default:
			break;
	}
}

void Uart_Hardware_Stop(eHardwareSerialName name)
{
	switch(name)
	{
		case UART_0:
			UART0_Stop();
			break;
		case UART_1:
			UART1_Stop();
			break;
		
		default:
			break;
	}
}

MD_STATUS Uart_Hardware_SendData(eHardwareSerialName name,  unsigned char* txbuf, unsigned short txnum )
{
	MD_STATUS status = MD_OK;
	switch(name)
	{
		case UART_0:
			status = UART0_SendData(txbuf, txnum);
			break;
		case UART_1:
			status = UART1_SendData(txbuf, txnum);
			break;
		default:
			break;
	}
	return status;
}

MD_STATUS Uart_Hardware_ReceiveData(eHardwareSerialName name,  unsigned char* rxbuf, unsigned short rxnum )
{
	MD_STATUS status = MD_OK;
	switch(name)
	{
		case UART_0:
			status = UART0_ReceiveData(rxbuf, rxnum);
			break;
		case UART_1:
			status = UART1_ReceiveData(rxbuf, rxnum);
			break;
		default:

			break;
	}
	return status;
}
