==> LEOlianggaosang/verb_BWjiwenVersion0/奶瓶机显示板/SC95F8617B_8616B_BW1_R _NEWFORM0/Hardware/LowLevel/SinOne/SC95F7617/devs/Serial.c <==
#include "..\SC95F861xB_C.H"
#include "Serial.h"
#include "Power\Power.h"
#define UART0_RATE_FROM_T1 0
#define PCON_SMOD_NONE_DIV	0X00
#define PCON_SMOD_16_DIV	0X80
#define UART0_BAUD_RATE		BAUD_RATE
#define UART0_BAUD_VALUE	(32000000/UART0_BAUD_RATE)
#define US2CON1_COUNT_LOW	LOW_8BITS(USCI2_BAUD_VALUE)
#define US2CON1_COUNT_HIGH	HIGH_8BITS(USCI2_BAUD_VALUE)
#define USCI0_OFF	0x00
#define USCI0_SPI	0x10
#define USCI0_TWI	0x20
#define USCI0_UART	0x30
#define US0CON0_SM0 0x80
#define US0CON0_SM1	0x40
#define US0CON0_SM2	0x20
#define US0CON0_REN	0x10
#define US0CON0_TB8	0x08
#define US0CON0_RB8	0x04
#define US0CON0_TI	0x02
#define US0CON0_RI	0x01
#define US0CON0_REN_ON (US0CON0 |= US0CON0_REN)
#define US0CON0_REN_OFF (US0CON0 &= ~US0CON0_REN)
#define US0CON0_TI_ON (US0CON0 |= US0CON0_TI)
#define US0CON0_TI_OFF (US0CON0 &= ~US0CON0_TI)
#define US0CON0_RI_ON (US0CON0 |= US0CON0_RI)
#define US0CON0_RI_OFF (US0CON0 &= ~US0CON0_RI)
#define USCI0_BAUD_RATE		BAUD_RATE
#define USCI0_BAUD_VALUE	(32000000/USCI0_BAUD_RATE)
#define US0CON1_COUNT_LOW		LOW_8BITS(USCI0_BAUD_VALUE)
#define US0CON1_COUNT_HIGH	HIGH_8BITS(USCI0_BAUD_VALUE)
#define USCI1_OFF	0x00
#define USCI1_SPI	0x40
#define USCI1_TWI	0x80
#define USCI1_UART	0xC0
#define US1CON0_SM0 0x80
#define US1CON0_SM1	0x40
#define US1CON0_SM2	0x20
#define US1CON0_REN	0x10
#define US1CON0_TB8	0x08
#define US1CON0_RB8	0x04
#define US1CON0_TI	0x02
#define US1CON0_RI	0x01
#define US1CON0_REN_ON (US1CON0 |= US1CON0_REN)

void UART0_Init( void )
{//T2
	P2CON &= 0xFC;   //TX/RX is set to pull-up Input Mode 
	P2PH  |= 0x03;
	// mode 1: 1 start bit , 8 data, 1 stop bit
	// disable receive data
	SCON |= 0x40;		//0100 0000//Set the communication mode to mode 1 
#if	UART0_RATE_FROM_T1
	TMCON |= 0X02;   //T1频率来自fsys
	TXINX = 0x02;    //指向T2
	TXCON &= (~0x30);    //UART0收发波特率都由T1产生
	TH1 = UART0_BAUD_VALUE>>8;
	TL1 = UART0_BAUD_VALUE;
	TR1 = 0;//T1停止计数
	ET1 = 0;/T1禁止中断
	EUART = 0;     //Disable UART interrupt
#else
	TXINX = 0x02;    	//指向T2
	TXCON |= 0x30;    //UART0收发波特率都由T2产生
	TXMOD |= 0X80;		//T2频率来自fsys，禁止输出，禁止递减
	RCAPXH = (unsigned char)(UART0_BAUD_VALUE>>8);
	RCAPXL = (unsigned char)UART0_BAUD_VALUE;
	TRX = 0;//T2停止计数
	ET2 = 0;//T2禁止中断
	EUART = 0;     //Disable UART interrupt
#endif
	UART0isSendBuzy = 0;
	UART0hasReceived = 0;
	gUART0TxCnt = 0;
	gUART0RxCnt = 0;
}

void Uart_Hardware_Init(eHardwareSerialName name)
{
	switch(name)
	{
		case UART_0:
			UART0_Init();
			break;
		case USCI_0:
			USCI0_Init();
			break;
		case USCI_1:
			USCI1_Init();
			break;
		case USCI_2:
			USCI2_Init();
			break;
		default:
			break;
	}
		 
}

void Uart_Hardware_Start(eHardwareSerialName name)
{
	switch(name)
	{
		case UART_0:
			UART0_Start();
			break;
		case USCI_0:
			USCI0_Start();
			break;
		case USCI_1:
			USCI1_Start();
			break;
		case USCI_2:
			USCI2_Start();
			break;
		default:

			break;
	}
}

void Uart_Hardware_Stop(eHardwareSerialName name)
{
	switch(name)
	{
		case UART_0:
			UART0_Stop();
			break;
		case USCI_0:
			USCI0_Stop();
			break;
		case USCI_1:
			USCI1_Stop();
			break;
		case USCI_2:
			USCI2_Stop();
			break;
		default:

			break;
	}
}

MD_STATUS Uart_Hardware_SendData(eHardwareSerialName name,  unsigned char* txbuf, unsigned short txnum )
{
	MD_STATUS status = MD_OK;
	switch(name)
	{
		case UART_0:
			status = UART0_SendData(txbuf, txnum);
			break;
		case USCI_0:
			status = USCI0_SendData(txbuf, txnum);
			break;
		case USCI_1:
			status = USCI1_SendData(txbuf, txnum);
			break;
		case USCI_2:
			status = USCI2_SendData(txbuf, txnum);
			break;
		default:

			break;
	}
	return status;
}

MD_STATUS Uart_Hardware_ReceiveData(eHardwareSerialName name,  unsigned char* rxbuf, unsigned short rxnum )
{
	MD_STATUS status = MD_OK;
	switch(name)
	{
		case UART_0:
			status = UART0_ReceiveData(rxbuf, rxnum);
			break;
		case USCI_0:
			status = USCI0_ReceiveData(rxbuf, rxnum);
			break;
		case USCI_1:
			status = USCI1_ReceiveData(rxbuf, rxnum);
			break;
		case USCI_2:
			status = USCI2_ReceiveData(rxbuf, rxnum);
			break;
		default:

			break;
	}
	return status;
}
